--- a/app/static/views/users/login.html
+++ b/app/static/views/users/login.html
@@ -1,8 +1,8 @@
 
 <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
-        <h1 class="page-header">DoIt</h1>
-        <p class="lead">A simple but powerful system to drastically improve your productivity.</p>
+        <h1 class="page-header doit-brand doit-brand-login text-center">FocusOn</h1>
+        <p class="lead text-center">A simple but powerful system to drastically improve your productivity.</p>
         <div class="panel panel-default doit-login-box">
             <div class="panel-body">
                 <div class="row">
