--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.min.css"/>
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
-</head>
-<body>
+    <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'><body>
 {% block content %}{% endblock %}
 <div class="view-container">
     <div class="container view-frame" ui-view></div>
@@ -22,13 +20,13 @@
 <script src="lib/jquery-ui/jquery-ui.js"></script>
 <script src="lib/lodash/dist/lodash.js"></script>
 <script src="lib/angular/angular.js"></script>
+<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/satellizer/satellizer.js"></script>
 <script src="lib/angular-timer/dist/angular-timer.js"></script>
-<script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/showdown/src/showdown.js"></script>
 <script src="lib/angular-markdown-directive/markdown.js"></script>
 <script src="lib/angular-ui-date/src/date.js"></script>
