--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -3,13 +3,13 @@
         <h1 class="doit-brand">FocusOn</h1>
     </div>
     <div class="col-xs-2">
-        <div class="doit-controls-top">
+        <div class="doit-controls-top pull-right">
             <button class="btn btn-default"
                     tooltip="{{ user.email }}"
                     tooltip-animation="false"
                     tooltip-placement="bottom"
                     tooltip-trigger>
-                {{ user.displayName }}
+                {{ user.display_name }}
             </button>
         </div>
     </div>
@@ -21,7 +21,7 @@
     <div class="col-xs-3">
         <div class="doit-controls-top pull-right">
             <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
-                <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+                <span class="fa fa-archive"></span>
             </button>
             <button type="button" class="btn btn-default" ui-sref="stats">
                 <span class="fa fa-line-chart"></span>
@@ -57,6 +57,21 @@
                 </form>
             </div>
         </div>
+
+        <!-- Tags pane -->
+        <div class="list-group">
+            <a href="#/home/" class="list-group-item" ng-class="selectedTag == '' ? 'active' : ''">
+                <i class="fa fa-tags"></i> Show All
+            </a>
+            <a ng-href="#/home/{{ tag.text }}" class="list-group-item"
+               ng-repeat="tag in tags"
+               ng-click="filterTodos(tag.text)"
+               ng-class="tag.text == selectedTag ? 'active' : ''">
+                <i class="fa fa-tag"></i> {{ tag.text }}
+            </a>
+        </div>
+        <!-- End of Tags pane -->
+
     </div>
 
     <div class="col-xs-8">
@@ -151,6 +166,10 @@
 
         </div>
         <!-- End of Break panel -->
+        <div class="text-center" ng-if="todos.length == 0 && !todo.text">
+            <span class="fa fa-check-square-o fa-5x" style="margin-top: 60px"></span><br/>
+            <p class="doit-font" style="font-size: 28px;">You're all done for now!</p>
+        </div>
 
         <!-- List of TODOs -->
         <ul class="list-group">
@@ -158,7 +177,7 @@
             <li class="list-group-item todo-body" ng-if="todo.text.length > 0">
                 <div class="row">
                     <div class="col-xs-12">
-                        <span class="done-{{todo.done}} lead">{{todo.text}}</span>
+                        <span class="done-{{todo.done}} doit-item">{{todo.text}}</span>
                     </div>
                 </div>
                 <div class="row">
@@ -183,7 +202,7 @@
                     <div class="col-xs-8">
                         <input type="checkbox" ng-model="todo.done"/>
                         <a ng-href="#todo/{{ todo.id }}" style="color: inherit;">
-                            <span class="done-{{todo.done}} lead" ng-bind-html="todo.text | highlight:todoSearch"></span><br/>
+                            <span class="done-{{todo.done}} doit-item lead" ng-bind-html="todo.text | highlight:todoSearch"></span><br/>
                         </a>
                     </div>
                     <div class="col-xs-4">
