--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.min.css"/>
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'><body>
 {% block content %}{% endblock %}
 <div class="view-container">
