Enabled extended editor, fixed search, update bower.json

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -88,8 +88,8 @@ body {
 }
 
 .doit-item {
-    font-family: 'Slabo 27px', serif;
-    font-size: 22px;
+    font-family: 'Oxygen', sans-serif;
+    font-size: 20px;
 }
 
 .doit-font {
