--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,8 +1,13 @@
 <div id="doit-topbar" class="row">
-    <div class="col-xs-2">
+    <div class="col-md-4 col-xs-3">
         <h1 class="doit-brand">FocusOn</h1>
     </div>
-    <div class="col-xs-2">
+    <div class="col-md-4 col-xs-4">
+        <div class="doit-controls-top">
+            <input type="text" class="form-control" placeholder="Filter this page" ng-model="todoSearch"/>
+        </div>
+    </div>
+    <div class="col-md-4 col-xs-5">
         <div class="doit-controls-top pull-right">
             <button class="btn btn-default"
                     tooltip="{{ user.email }}"
@@ -11,24 +16,17 @@
                     tooltip-trigger>
                 {{ user.display_name }}
             </button>
-        </div>
-    </div>
-    <div class="col-xs-5">
-        <div class="doit-controls-top">
-            <input type="text" class="form-control" placeholder="Search" ng-model="todoSearch"/>
-        </div>
-    </div>
-    <div class="col-xs-3">
-        <div class="doit-controls-top pull-right">
-            <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
-                <span class="fa fa-archive"></span>
-            </button>
-            <button type="button" class="btn btn-default" ui-sref="stats">
-                <span class="fa fa-line-chart"></span>
-            </button>
-            <button class="btn btn-default" ui-sref="logout">
-                <span class="fa fa-power-off"></span>
-            </button>
+            <div class="btn-group">
+                <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
+                    <span class="fa fa-archive"></span>
+                </button>
+                <button type="button" class="btn btn-default" ui-sref="stats">
+                    <span class="fa fa-line-chart"></span>
+                </button>
+                <button class="btn btn-default" ui-sref="logout">
+                    <span class="fa fa-power-off"></span>
+                </button>
+            </div>
         </div>
     </div>
 </div>
@@ -36,25 +34,47 @@
 
 <div class="row">
 
-    <div class="col-xs-4">
+    <div class="col-sm-4">
 
         <div class="panel panel-default">
             <div class="panel-body">
-                <form class="form-horizontal" role="form">
+                <form class="form-horizontal" role="form" ng-submit="addTodo()">
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <tags-input ng-model="todo.tags" type="text" id="inputTag" placeholder="Label your todo">
+                            <tags-input ng-model="editor.todo.tags" type="text" id="inputTag" placeholder="Tags" ng-required="false">
                                 <auto-complete source="loadTags($query)"></auto-complete>
                             </tags-input>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input ng-model="todo.text" type="text" class="form-control" id="inputText" placeholder="What do you need to do?">
+                            <input ng-model="editor.todo.text" type="text" class="form-control" id="inputText" placeholder="Task" ng-required="true">
                         </div>
                     </div>
-                    <button class="btn btn-default pull-right hidden" ng-click="addTodo()">Add</button>
+                    <div collapse="!editor.isExpanded">
+                        <div class="form-group">
+                            <div class="col-xs-12">
+                                <p class="input-group">
+                                    <input type="text" class="form-control" datepicker-popup ng-model="editor.todo.due" is-open="editor.dpIsOpen" placeholder="Due Date" ng-required="false"/>
+                                    <span class="input-group-btn">
+                                        <button type="button" class="btn btn-default" ng-click="editor.openDatePicker($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12">
+                                <textarea class="form-control" rows="3" ng-model="editor.todo.note" placeholder="Notes" ng-required="false"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pull-right">
+                        <button type="submit" class="btn btn-default"><span class="fa fa-plus"></span></button>
+                    </div>
                 </form>
+                    <div class="pull-left">
+                        <button class="btn btn-default" ng-click="editor.isExpanded = !editor.isExpanded"><span class="fa fa-expand"></span></button>
+                    </div>
             </div>
         </div>
 
@@ -64,17 +84,17 @@
                 <i class="fa fa-tags"></i> Show All
             </a>
             <a ng-href="#/home/{{ tag.text }}" class="list-group-item"
-               ng-repeat="tag in tags"
+               ng-repeat="tag in tags | filter:{ text: todoSearch }"
                ng-click="filterTodos(tag.text)"
                ng-class="tag.text == selectedTag ? 'active' : ''">
-                <i class="fa fa-tag"></i> {{ tag.text }}
+                <i class="fa fa-tag"></i> <span ng-bind-html="tag.text | highlight:todoSearch"></span>
             </a>
         </div>
         <!-- End of Tags pane -->
 
     </div>
 
-    <div class="col-xs-8">
+    <div class="col-sm-8">
 
         <!-- Pomodoro panel (only shows if pomodoro is running) -->
         <div class="panel panel-default" ng-show="pomodoro.pomoState == 'running' || pomodoro.pomoState == 'finished'">
@@ -166,7 +186,7 @@
 
         </div>
         <!-- End of Break panel -->
-        <div class="text-center" ng-if="todos.length == 0 && !todo.text">
+        <div class="text-center" ng-if="todos.length == 0 && !editor.todo.text">
             <span class="fa fa-check-square-o fa-5x" style="margin-top: 60px"></span><br/>
             <p class="doit-font" style="font-size: 28px;">You're all done for now!</p>
         </div>
@@ -174,29 +194,31 @@
         <!-- List of TODOs -->
         <ul class="list-group">
             <!-- Placeholder for new to-do -->
-            <li class="list-group-item todo-body" ng-if="todo.text.length > 0">
+            <li class="list-group-item todo-body" ng-if="editor.todo.text.length > 0">
                 <div class="row">
                     <div class="col-xs-12">
-                        <span class="done-{{todo.done}} doit-item">{{todo.text}}</span>
+                        <span class="done-{{editor.todo.done}} doit-item">{{editor.todo.text}}</span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="tags-list">
                             <!-- Tags within a single to-do -->
-                            <span ng-repeat="tag in todo.tags" class="tag-item">{{ tag.text }}</span>
+                            <span ng-repeat="tag in editor.todo.tags" class="tag-item">{{ tag.text }}</span>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <small class="pull-right text-muted">Created: NOW</small>
+                        <div class="pull-right">
+                            <span class="fa fa-spinner fa-spin"></span> <small class="text-muted">Editing...</small>
+                        </div>
                     </div>
                 </div>
             </li>
             <!-- End of placeholder -->
             <!-- TODO: Should be a directive -->
-            <li ng-repeat="todo in todos | filter:todoSearch | orderBy:'!created' | showSelectedOnly:selectedTags"
+            <li ng-repeat="todo in todos | filter:{ text: todoSearch } | orderBy:'!created'"
                 ng-if="todo.deleted == false"
-                ng-class="{disabled: todo.done}"
+
                 class="list-group-item todo-body">
                 <div class="row">
                     <div class="col-xs-8">
@@ -222,7 +244,7 @@
                     <div class="col-xs-6">
                         <div class="tags-list">
                             <!-- Tags within a single to-do -->
-                            <span ng-repeat="tag in todo.tags" class="tag-item" ng-bind-html="tag.text | highlight:todoSearch"></span>
+                            <span ng-repeat="tag in todo.tags" class="tag-item" ng-bind-html="tag.text"></span>
                         </div>
                     </div>
                 </div>
