--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doit</title>
-    <link href="lib/bootstrap-css/css/bootstrap.css" rel="stylesheet">
+    <title>FocusOn</title>
+    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="lib/jquery-ui/themes/smoothness/jquery-ui.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.min.css"/>
@@ -13,6 +13,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'><body>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 {% block content %}{% endblock %}
 <div class="view-container">
     <div class="container view-frame" ui-view></div>
@@ -21,6 +22,7 @@
 <script src="lib/jquery-ui/jquery-ui.js"></script>
 <script src="lib/lodash/dist/lodash.js"></script>
 <script src="lib/angular/angular.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
