Added basic user experience system

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -10,6 +10,10 @@ body {
     margin-bottom: 0;
 }
 
+.todo-additional-info {
+    padding-top: 5px;
+}
+
 .btn-google-plus {
   color: #fff;
   background-color: #dd4b39;
