--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,6 +47,7 @@
 <script src="js/users/login_controller.js"></script>
 <script src="js/users/logout_controller.js"></script>
 <script src="js/users/account.js"></script>
+<script src="js/users/levels.js"></script>
 <script src="js/stats/stats-controller.js"></script>
 
 </body>
