--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -1,21 +1,21 @@
 <div id="doit-topbar" class="row">
-    <div class="col-md-4 col-xs-3">
-        <h1 class="doit-brand">FocusOn</h1>
+    <div class="col-md-2 col-xs-2">
+        <h1 class="doit-brand">F><</h1>
     </div>
-    <div class="col-md-4 col-xs-4">
+    <div class="col-md-2 col-xs-3">
+        <div class="doit-controls-top">
+             <span class="label label-default">{{ userLevel }}</span>
+            <img ng-src="{{ user.picture }}" alt="{{ user.display_name }}" height="17px" width="17px"> <small>{{ user.display_name }}</small>
+            <progressbar max="100" value="userLevelProgressPercent" tooltip="{{ userXpTilLevelUp }} XP from level {{ userLevel + 1}}" tooltip-placement="bottom" style="height: 4px; margin-top:1px;"><span style="color:black; white-space:nowrap;"></span></progressbar>
+        </div>
+    </div>
+    <div class="col-md-4 col-xs-3">
         <div class="doit-controls-top">
             <input type="text" class="form-control" placeholder="Filter this page" ng-model="todoSearch"/>
         </div>
     </div>
-    <div class="col-md-4 col-xs-5">
+    <div class="col-md-4 col-xs-4">
         <div class="doit-controls-top pull-right">
-            <button class="btn btn-default"
-                    tooltip="{{ user.email }}"
-                    tooltip-animation="false"
-                    tooltip-placement="bottom"
-                    tooltip-trigger>
-                {{ user.display_name }}
-            </button>
             <div class="btn-group">
                 <button ng-click="archiveTodos()" type="button" class="btn btn-default" tooltip-placement="left" tooltip="Archive Complete">
                     <span class="fa fa-archive"></span>
@@ -69,11 +69,14 @@
                         </div>
                     </div>
                     <div class="pull-right">
+                        <button ng-show="!editor.new" ng-click="cancelEditTask()" type="button" class="btn btn-danger"><span class="fa fa-arrow-left"></span></button>
                         <button type="submit" class="btn btn-default"><span class="fa fa-plus"></span></button>
                     </div>
                 </form>
                     <div class="pull-left">
-                        <button class="btn btn-default" ng-click="editor.isExpanded = !editor.isExpanded"><span class="fa fa-expand"></span></button>
+                        <button class="btn btn-default" ng-click="editor.isExpanded = !editor.isExpanded">
+                            <span class="fa" ng-class="editor.isExpanded ? 'fa-compress' : 'fa-expand'"></span>
+                        </button>
                     </div>
             </div>
         </div>
@@ -87,7 +90,7 @@
                ng-repeat="tag in tags | filter:{ text: todoSearch }"
                ng-click="filterTodos(tag.text)"
                ng-class="tag.text == selectedTag ? 'active' : ''">
-                <i class="fa fa-tag"></i> <span ng-bind-html="tag.text | highlight:todoSearch"></span>
+                <span class="fa fa-tag"></span> <span ng-bind-html="tag.text | highlight:todoSearch"></span>
             </a>
         </div>
         <!-- End of Tags pane -->
@@ -159,12 +162,16 @@
                         </p>
                     </div>
                     <div class="col-xs-5">
-                        <div class="pull-right">
+                        <div class="pull-right" ng-show="pomodoro.pomoState == 'break-finished'">
                             <button type="button"
                                     class="btn btn-default"
-                                    ng-show="pomodoro.pomoState == 'break-finished'"
                                     ng-click="pomodoro.startPomo(pomodoro.activePomoTodo)">
-                                <i class="fa fa-refresh fa-spin"></i> Repeat Previous
+                                <span class="fa fa-refresh fa-spin"></span> Repeat Previous
+                            </button>
+                            <button type="button" class="btn btn-danger"
+                                    ng-click="pomodoro.closeBreakPanel()">
+
+                                <span class="fa fa-close"></span>
                             </button>
                             <blockquote ng-show="pomodoro.pomoState == 'break'">
                                 <p>
@@ -194,22 +201,43 @@
         <!-- List of TODOs -->
         <ul class="list-group">
             <!-- Placeholder for new to-do -->
-            <li class="list-group-item todo-body" ng-if="editor.todo.text.length > 0">
+            <li class="list-group-item list-group-item-warning todo-body" ng-if="editor.todo.text.length > 0">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-8">
                         <span class="done-{{editor.todo.done}} doit-item">{{editor.todo.text}}</span>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="pull-right">
+                            <span ng-show="!editor.new">
+                                <span class="fa fa-spinner fa-spin"></span> <small class="text-muted">Editing...</small>
+                            </span>
+                            <span ng-show="editor.new">
+                                <span class="fa fa-spinner fa-spin"></span> <small class="text-muted">Previewing new task...</small>
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="tags-list">
                             <!-- Tags within a single to-do -->
-                            <span ng-repeat="tag in editor.todo.tags" class="tag-item">{{ tag.text }}</span>
+                            <span ng-repeat="tag in editor.todo.tags" class="tag-item"><span class="fa fa-tag"></span> {{ tag.text }}</span>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="pull-right">
-                            <span class="fa fa-spinner fa-spin"></span> <small class="text-muted">Editing...</small>
+                        <p class="text-muted pull-right" ng-if="editor.todo.due">
+                           <span class="fa fa-clock-o"></span> {{ editor.todo.due | date:'short' }}
+                        </p>
+                    </div>
+                </div>
+                <div class="row" ng-show="editor.todo.note">
+                    <div class="todo-additional-info">
+                        <div class="col-xs-6">
+                            <div class="well" btf-markdown="editor.todo.note">
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                            Another col
                         </div>
                     </div>
                 </div>
@@ -223,28 +251,45 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <input type="checkbox" ng-model="todo.done"/>
-                        <a ng-href="#todo/{{ todo.id }}" style="color: inherit;">
+                        <a ng-click="expanded[$index] = !expanded[$index]" style="color: inherit;">
                             <span class="done-{{todo.done}} doit-item lead" ng-bind-html="todo.text | highlight:todoSearch"></span><br/>
                         </a>
                     </div>
                     <div class="col-xs-4">
                         <div class="btn-group pull-right">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                 Action <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li ng-click="pomodoro.startPomo(todo)"><a><span class="pointer">Start Pomo</span></a></li>
                                 <li class="divider"></li>
-                                <li ng-click="deleteTodo(todo)"><a><span class="pointer">Delete Todo</span></a></li>
+                                <li ng-click="editTask(todo, $index)"><a><span class="pointer">Edit Task</span></a></li>
+                                <li ng-click="deleteTodo(todo)"><a><span class="pointer">Delete Task</span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-8">
                         <div class="tags-list">
                             <!-- Tags within a single to-do -->
-                            <span ng-repeat="tag in todo.tags" class="tag-item" ng-bind-html="tag.text"></span>
+                            <span ng-repeat="tag in todo.tags" class="tag-item"><span class="fa fa-tag"></span> {{ tag.text }}</span>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <p class="text-muted pull-right" ng-if="todo.due">
+                            <span class="fa fa-clock-o"></span> {{ todo.due | date:'short' }}
+                        </p>
+                    </div>
+                </div>
+                <div class="row" collapse="!expanded[$index]">
+                    <div class="todo-additional-info">
+                        <div class="col-xs-6">
+                            <div class="well" btf-markdown="todo.note">
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                            <span class="label label-default">{{ todo.pomodoros.length }}</span> Pomodoros complete.
                         </div>
                     </div>
                 </div>
