--- a/app/static/views/home/home.html
+++ b/app/static/views/home/home.html
@@ -4,9 +4,9 @@
     </div>
     <div class="col-md-2 col-xs-3">
         <div class="doit-controls-top">
-             <span class="label label-default">{{ userLevel }}</span>
+             <span class="label label-default">{{ levelInfo.level }}</span>
             <img ng-src="{{ user.picture }}" alt="{{ user.display_name }}" height="17px" width="17px"> <small>{{ user.display_name }}</small>
-            <progressbar max="100" value="userLevelProgressPercent" tooltip="{{ userXpTilLevelUp }} XP from level {{ userLevel + 1}}" tooltip-placement="bottom" style="height: 4px; margin-top:1px;"><span style="color:black; white-space:nowrap;"></span></progressbar>
+            <progressbar max="1" value="levelInfo.levelProgress" tooltip="{{ levelInfo.xpTilLevelUp }} XP from level {{ levelInfo.level + 1}}" tooltip-placement="bottom" style="height:10px; margin-top:2px;" type="success"><span style="color:black; white-space:nowrap;"></span></progressbar>
         </div>
     </div>
     <div class="col-md-4 col-xs-3">
@@ -195,7 +195,13 @@
         <!-- End of Break panel -->
         <div class="text-center" ng-if="todos.length == 0 && !editor.todo.text">
             <span class="fa fa-check-square-o fa-5x" style="margin-top: 60px"></span><br/>
-            <p class="doit-font" style="font-size: 28px;">You're all done for now!</p>
+            <p class="doit-font" style="font-size: 28px;" ng-if="selectedTag == ''">
+                You're all done for now!
+            </p>
+            <p class="doit-font" style="font-size: 28px;" ng-if="selectedTag != ''">
+                You've got no unarchived tasks in <span class="label label-primary">{{ selectedTag }}</span>!
+            </p>
+
         </div>
 
         <!-- List of TODOs -->
